# CrewAI_deploy

./: pyproject.toml  requirements.txt
crew_deploy/: README.md
crew_deploy/src/crew_deploy/: crew.py  main.py
src/crew_deploy/: crew.py
