[project]
name = "crew_deploy"
version = "0.1.0"
description = "crew_deploy using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.2.1"
]

[project.scripts]
crew_deploy = "crew_deploy.main:run"
run_crew = "crew_deploy.main:run"
train = "crew_deploy.main:train"
replay = "crew_deploy.main:replay"
test = "crew_deploy.main:test"
run_with_trigger = "crew_deploy.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
